input issue fixed on mobile , html layout changes

--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@
     display: flex;
     flex-direction: column;
     /* grid-template-columns: repeat(aut); */
-
 }
 
 .inner-box{
@@ -37,7 +36,24 @@
 
 }
 
+/* Chrome, Safari, Edge, Opera */
+input.cell::-webkit-outer-spin-button,
+input.cell::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number].cell {
+  -moz-appearance: textfield;
+    appearance: textfield;
+}
+
 .cell{
+    text-decoration: none;
+    outline: none;
+    box-shadow: none;
+    border: none;
     width: 15px;
     height: 15px;
     display: flex;
@@ -47,8 +63,13 @@
     /* border-bottom: 0.5px solid black; */
 }
 
-.inner-box .cell:nth-child(3n) {
-    /* border-right: 2px solid black; */
+.inner-box .cell:nth-child(3),
+.inner-box .cell:nth-child(6) {
+    border-right: 2px solid black;
+}
+
+input.cell:focus-visible{
+
 }
 
 .inner-box .cell:last-child{
@@ -66,6 +87,10 @@
     box-shadow: none;
     border: 1px solid #FFFFFF;
     margin: 20px 10px 0px 10px ;
+}
+
+button.btn:hover{
+    cursor: pointer;
 }
 
 .btn.clr {
